tests/positive/every_canonical.lator
s is numbers where every element <= next
