tests/negative/b5_wrong_element.lator
s is nums where every x <= next
